# avandra

./: .gitignore  README.md  TOOLS.md  avandra.code-workspace  example_task.txt  mcp_agent.config.yaml  mcp_agent.secrets.yaml.example  pyproject.toml
avandra/: __init__.py  __main__.py  app.py
avandra/servers/: __init__.py  hello.py  zoekt.py  zoekt_query_syntax.md
docs/research/: CLINE.md  DISCUSS_1.md
examples/: avandra_system_prompt.txt  make_system_prompt_configurable.txt  zoekt_search_task.txt
sandbox/: sandbox.py
servers/: hello.py
